feat: Create project, create app pages, app catalog, creat index_view

--- a/bookcrossing_project/templates/catalog/index.html
+++ b/bookcrossing_project/templates/catalog/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BookCrossing - Главная</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../../project_static/css/styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="img/logo.png" alt="BookCrossing" width="50">
+        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             <a class="nav-link" href="index.html">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">О проекте</a>
+            <a class="nav-link" href="../pages/about.html">О проекте</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Категории</a>
@@ -37,13 +37,13 @@
   </header>
 
   <div class="container">
-    <h1 class="mt-5">Название категории</h1>
+    <h1 class="mt-5">Список книг</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
         <div class="card">
           <div class="position-relative">
             <span class="badge badge-success">Популярная</span>
-            <img src="img/no-image.jpg" class="card-img-top book-image" alt="Book 1">
+            <img src="../../project_static/img/no-image.jpg" class="card-img-top book-image" alt="Book 1">
           </div>
 
           <div class="card-body">
@@ -59,7 +59,7 @@
         <div class="card">
           <div class="position-relative">
             <span class="badge badge-primary">Новая</span>
-            <img src="img/no-image.jpg" class="card-img-top book-image" alt="Book 2">
+            <img src="../../project_static/img/no-image.jpg" class="card-img-top book-image" alt="Book 2">
           </div>
           <div class="card-body">
             <h5 class="card-title">Название книги 2</h5>
