--- a/bookcrossing_project/templates/pages/about.html
+++ b/bookcrossing_project/templates/pages/about.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BookCrossing - О проекте</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../../project_static/css/styles.css">
 </head>
 
 <body>
   <header>
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="img/logo.png" alt="BookCrossing" width="50">
+      <a class="navbar-brand" href="../catalog/index.html">
+        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,13 +23,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Главная</a>
+            <a class="nav-link" href="../catalog/index.html">Главная</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">О проекте</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Категории</a>
+            <a class="nav-link" href="../catalog/categories.html">Категории</a>
           </li>
         </ul>
       </div>
