--- a/bookcrossing_project/templates/catalog/categories.html
+++ b/bookcrossing_project/templates/catalog/categories.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BookCrossing - Информация о категориях</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../../project_static/css/styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="img/logo.png" alt="BookCrossing" width="50">
+        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             <a class="nav-link" href="index.html">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">О проекте</a>
+            <a class="nav-link" href="../pages/about.html">О проекте</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="categories.html">Категории</a>
