feat: Add logic for genres and books detail

--- a/bookcrossing_project/templates/catalog/index.html
+++ b/bookcrossing_project/templates/catalog/index.html
@@ -1,86 +1,42 @@
-<!DOCTYPE html>
-<html lang="ru">
+{% extends 'base.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BookCrossing - Главная</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../project_static/css/styles.css">
-</head>
+{% load static %}
 
-<body>
-  <header>
-    <!-- Navigation Menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">О проекте</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Категории</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+{% block title %}BookCrossing - Главная{% endblock title %}
 
-  <div class="container">
+{% block content %}
+    <div class="container">
     <h1 class="mt-5">Список книг</h1>
     <div class="row mt-4">
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <div class="position-relative">
-            <span class="badge badge-success">Популярная</span>
-            <img src="../../project_static/img/no-image.jpg" class="card-img-top book-image" alt="Book 1">
-          </div>
+        {% for book in books reversed %}
+            <div class="col-md-4 mb-4">
+            <div class="card">
+                {% if book.popular %}
+                    <div class="position-relative">
+                    <span class="badge badge-success">Популярная</span>
+                {% endif %}
+                {% if book.new %}
+                    <span class="badge badge-primary">Новая</span>
+                {% endif %}
+                {% if book.image %}
+                    <img src="{% static book.image %}" class="card-img-top book-image" alt="{{ book.title }}">
+                {% else %}
+                    <img src="{% static 'img/no-image.jpg' %}" class="card-img-top book-image" alt="{{ book.title }}">
+                {% endif %}
+                </div>
 
-          <div class="card-body">
-            <h5 class="card-title">Название книги 1</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Автор книги 1</h6>
-            <p class="card-text">Краткое описание книги 1 (меньше 100 символов)</p>
-            <a href="book.html" class="btn btn-primary mt-3">Подробнее</a>
-          </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ book.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ book.author }}</h6>
+                    <p class="card-text">{{ book.description|truncatechars:100 }}</p>
+                    <a href="{% url 'catalog:book_detail_view' book.id %}" class="btn btn-primary mt-3">Подробнее</a>
+                </div>
+                </div>
+            </div>
+        {% endfor %}
+        <!-- Repeat the above card for other books -->
+
         </div>
-      </div>
-      <!-- Repeat the above card for other books -->
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <div class="position-relative">
-            <span class="badge badge-primary">Новая</span>
-            <img src="../../project_static/img/no-image.jpg" class="card-img-top book-image" alt="Book 2">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Название книги 2</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Автор книги 2</h6>
-            <p class="card-text">Краткое описание книги 2 (меньше 100 символов)</p>
-            <a href="book2.html" class="btn btn-primary mt-3">Подробнее</a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-
-  <footer class="bg-light mt-5 py-3">
-    <div class="container text-center">
-      <span>&copy; 2023 BookCrossing</span>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+{% endblock %}
 
