--- a/bookcrossing_project/templates/catalog/book.html
+++ b/bookcrossing_project/templates/catalog/book.html
@@ -1,70 +1,29 @@
-<!DOCTYPE html>
-<html lang="ru">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BookCrossing - Подробная информация о книге</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../project_static/css/styles.css">
-</head>
+{% block title %}BookCrossing - Подробная информация о книге{% endblock title %}
 
-<body>
-  <header>
-    <!-- Navigation Menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">О проекте</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Категории</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-   <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="../../project_static/img/no-image.jpg" alt="Book Image" class="img-fluid">
-      </div>
-      <div class="col-md-8">
-        <h1>Название книги</h1>
-        <h4>Автор</h4>
-        <p class="text-muted">Категории</p>
-        <p>Год создания: 2023</p>
-        <p>ISBN: 1234567890</p>
-        <h4>Описание:</h4>
-        <p>Длинное описание книги.</p>
-        <h4>Местоположение:</h4>
-        <p>Место, где книга находится.</p>
-      </div>
+{% block content %}
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                {% if book.image %}
+                    <img src="{% static book.image %}" class="card-img-top book-image" alt="{{ book.title }}">
+                {% else %}
+                    <img src="{% static 'img/no-image.jpg' %}" class="card-img-top book-image" alt="{{ book.title }}">
+                {% endif %}
+            </div>
+            <div class="col-md-8">
+                <h1>{{ book.title }}</h1>
+                <h4>Автор: {{ book.author }}</h4>
+                <p class="text-muted">Категории: {{ book.category }}</p>
+                <p>Год создания: {{ book.year }}</p>
+                <p>ISBN: {{ book.ISBN }}</p>
+                <h4>Описание:</h4>
+                <p>{{ book.description|linebreaksbr }}</p>
+                <h4>Местоположение:</h4>
+                <p>{{ book.place }}</p>
+            </div>
+        </div>
     </div>
-  </div>
-
-
-  <footer class="bg-light mt-5 py-3">
-    <div class="container text-center">
-      <span>&copy; 2023 BookCrossing</span>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
-
+{% endblock content %}
