--- a/bookcrossing_project/templates/catalog/categories.html
+++ b/bookcrossing_project/templates/catalog/categories.html
@@ -1,76 +1,26 @@
-<!DOCTYPE html>
-<html lang="ru">
+{% extends 'base.html '%}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BookCrossing - Информация о категориях</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../project_static/css/styles.css">
-</head>
+{% load static %}
 
-<body>
-  <header>
-    <!-- Navigation Menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">
-        <img src="../../project_static/img/logo.png" alt="BookCrossing" width="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">О проекте</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="categories.html">Категории</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+{% block title %}BookCrossing - Информация о категориях{% endblock title %}
 
+{% block content %}
   <div class="container mt-5">
     <h1>Информация о категориях</h1>
+      {% for category in categories %}
     <div class="row">
       <div class="col-md-6">
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title">Категория 1</h5>
-            <p class="card-text">Описание категории 1.</p>
-            <p class="card-text">Количество книг из этой категории: 10</p>
-            <a href="category.html" class="btn btn-primary">Просмотреть</a>
+            <h5 class="card-title">Имя категории: {{ category.name }}</h5>
+            <p class="card-text">Описание: {{ category.description }}</p>
+            <p class="card-text">Книг в категории: {{ category.books_count }}</p>
+            <a href="{% url 'catalog:category_detail_view' category.name %}" class="btn btn-primary">Просмотреть</a>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title">Категория 2</h5>
-            <p class="card-text">Описание категории 2.</p>
-            <p class="card-text">Количество книг из этой категории: 15</p>
-            <a href="category.html" class="btn btn-primary">Просмотреть</a>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
       <!-- Repeat the above card section for each category dynamically -->
     </div>
   </div>
-
-  <footer class="bg-light mt-auto py-3">
-    <div class="container text-center">
-      <span>&copy; 2023 BookCrossing</span>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+{% endblock content %}
