Added genres logic

--- a/bookcrossing_project/templates/catalog/book.html
+++ b/bookcrossing_project/templates/catalog/book.html
@@ -8,7 +8,10 @@
         <div class="row">
             <div class="col-md-4">
                 {% if book.image %}
-                    <img src="{% static book.image %}" class="card-img-top book-image" alt="{{ book.title }}">
+                    <img
+                            src="{% static book.image %}"
+                            class="card-img-top book-image"
+                            alt="{{ book.title }}">
                 {% else %}
                     <img src="{% static 'img/no-image.jpg' %}" class="card-img-top book-image" alt="{{ book.title }}">
                 {% endif %}
@@ -16,7 +19,10 @@
             <div class="col-md-8">
                 <h1>{{ book.title }}</h1>
                 <h4>Автор: {{ book.author }}</h4>
-                <p class="text-muted">Категории: {{ book.category }}</p>
+                <p>Категории: {% for category in book.category %}
+                    <a href="{% url 'catalog:category_detail_view' category %}"
+                      class="btn btn-primary mt-3">{{ category }}</a>
+                {% endfor %}</p>
                 <p>Год создания: {{ book.year }}</p>
                 <p>ISBN: {{ book.ISBN }}</p>
                 <h4>Описание:</h4>
