--- a/bookcrossing_project/templates/catalog/index.html
+++ b/bookcrossing_project/templates/catalog/index.html
@@ -6,35 +6,37 @@
 
 {% block content %}
     <div class="container">
-    <h1 class="mt-5">Список книг</h1>
-    <div class="row mt-4">
-        {% for book in books reversed %}
-            <div class="col-md-4 mb-4">
-            <div class="card">
-                {% if book.popular %}
-                    <div class="position-relative">
-                    <span class="badge badge-success">Популярная</span>
-                {% endif %}
-                {% if book.new %}
-                    <span class="badge badge-primary">Новая</span>
-                {% endif %}
-                {% if book.image %}
-                    <img src="{% static book.image %}" class="card-img-top book-image" alt="{{ book.title }}">
-                {% else %}
-                    <img src="{% static 'img/no-image.jpg' %}" class="card-img-top book-image" alt="{{ book.title }}">
-                {% endif %}
-                </div>
+        <h1 class="mt-5">Список книг</h1>
+        <div class="row mt-4">
+            {% for book in books reversed %}
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        {% if book.popular %}
+                            <div class="position-relative">
+                            <span class="badge badge-success">Популярная</span>
+                        {% endif %}
+                        {% if book.new %}
+                            <span class="badge badge-primary">Новая</span>
+                        {% endif %}
+                        {% if book.image %}
+                            <img src="{% static book.image %}" class="card-img-top book-image"
+                                 alt="{{ book.title }}">
+                        {% else %}
+                            <img src="{% static 'img/no-image.jpg' %}" class="card-img-top book-image"
+                                 alt="{{ book.title }}">
+                        {% endif %}
+                        </div>
 
-                <div class="card-body">
-                    <h5 class="card-title">{{ book.title }}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{ book.author }}</h6>
-                    <p class="card-text">{{ book.description|truncatechars:100 }}</p>
-                    <a href="{% url 'catalog:book_detail_view' book.id %}" class="btn btn-primary mt-3">Подробнее</a>
+                        <div class="card-body">
+                            <h5 class="card-title">{{ book.title }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">{{ book.author }}</h6>
+                            <p class="card-text">{{ book.description|truncatechars:100 }}</p>
+                            <a href="{% url 'catalog:book_detail_view' book.id %}" class="btn btn-primary mt-3">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
-        {% endfor %}
-        <!-- Repeat the above card for other books -->
+            {% endfor %}
+            <!-- Repeat the above card for other books -->
 
         </div>
     </div>
