--- a/bookcrossing_project/templates/catalog/index.html
+++ b/bookcrossing_project/templates/catalog/index.html
@@ -31,7 +31,7 @@
                             <h5 class="card-title">{{ book.title }}</h5>
                             <h6 class="card-subtitle mb-2 text-muted">{{ book.author }}</h6>
                             <p class="card-text">{{ book.description|truncatechars:100 }}</p>
-                            <a href="{% url 'catalog:book_detail_view' book.id %}" class="btn btn-primary mt-3">Подробнее</a>
+                            <a href="{% url 'catalog:book_detail_view' book.id %}" class="btn btn-primary mt-3 stretched-link">Подробнее</a>
                         </div>
                     </div>
                 </div>
